[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTCP"
version = "3.0.0"
description = "TCP/IP stack written in Python."
readme = "README.md"
authors = [{ name = "Sebastian Majewski", email = "ccie18643@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Environment :: Console",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
keywords = [
    "pytcp",
    "stack",
    "networking",
    "tcp",
    "ip",
    "ipv4",
    "ipv6",
    "arp",
    "ethernet",
    "icmp",
]
dependencies = []
requires-python = ">=3.12"

[project.urls]
"Homepage" = "https://github.com/ccie18643/PyTCP"
"Bug Tracker" = "https://github.com/ccie18643/PyTCP/issues"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
src_paths = ["pytcp", "examples", "tests"]
line_length = 80
honor_noqa = true

[tool.codespell]
quiet-level = 2
ignore-words-list = "ect, ether, nd, tha, assertIn, sourc"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    super-init-not-called,
    no-name-in-module,
    import-error,
    dangerous-default-value,
    too-many-instance-attributes,
    too-many-public-methods,
    too-many-arguments,
    too-many-locals,
    too-many-branches,
    too-few-public-methods,
    import-outside-toplevel,
    fixme,
    multiple-statements,
    invalid-name,
    redefined-builtin,
    superfluous-parens,
    expression-not-assigned,
    no-member,
    too-many-ancestors,
    redefined-outer-name,
"""
