[metadata]
name = python_tcp_ip_stack
version = 2.7.0
author = Sebastian Majewski
author_email = ccie18643@gmail.com
description = TCP/IP stack written in Python.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/ccie18643/PyTCP
project_urls =
    Bug Tracker = https://github.com/ccie18643/PyTCP/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
    Natural Language :: English
    Environment :: Console
    Topic :: System :: Networking
    Typing :: Typed

[options]
package_dir =
    = pytcp
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[flake8]
max-line-length = 120
ignore = E203, W503

[mypy]
python_version = 3.10
check_untyped_defs = True
disallow_untyped_defs = True
disallow_any_unimported = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_return_any = True
warn_unused_ignores = True
show_error_codes = True
